# setup_rotaryPi

./: .gitignore  CMakeLists.txt  install_bcm2835  playlist.txt
cmake_modules/: FindUdev.cmake  Findyaml-cpp.cmake
src/: main_blink_led.c  main_check_hook.c  main_clear_pins.c  main_count_pulses.c  main_run_phone.c
test/: test_main.cpp
